--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: bash
 before_deploy:
   - "./build_release"
 deploy:
+  skip_cleanup: true
   provider: releases
   api_key: "92ef96947b06b6bf67590313baaafea2b71f08ee"
   file:
