--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
   "homepage": "https://github.com/yeun/open-color",
   "devDependencies": {
     "ase-utils": "^0.1.1",
-    "handlebars": "^4.0.5"
+    "handlebars": "^4.0.5",
+    "uuid": "^3.0.1",
+    "archiver": "^1.3.0"
   }
 }
