Edit author's email address

--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
     "open-color.css"
   ],
   "authors": [
-    "Jeong Heeyeun <hyd5012@gmail.com>"
+    "Jeong Heeyeun <heeyeun.design@gmail.com>"
   ],
   "license": "MIT",
   "keywords": [
