--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "Stylus",
     "CSS"
   ],
-  "author": "Jeong Heeyeun <hyd5012@gmail.com>",
+  "author": "Jeong Heeyeun <heeyeun.design@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yeun/open-color/issues"
