--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -3,7 +3,7 @@ host: 0.0.0.0
 markdown: kramdown
 highlighter: rouge
 
-oc-version: 1.5.1
+oc-version: 1.6.0
 colors: [
                   "gray",
                   "red",
@@ -99,16 +99,16 @@ indigo-hexs: [
 ]
 
 blue-hexs: [
-                  "#e8f7ff",
-                  "#ccedff",
-                  "#a3daff",
-                  "#72c3fc",
-                  "#4dadf7",
-                  "#329af0",
-                  "#228ae6",
-                  "#1c7cd6",
-                  "#1b6ec2",
-                  "#1862ab"
+                  "#e7f5ff",
+                  "#d0ebff",
+                  "#a5d8ff",
+                  "#74c0fc",
+                  "#4dabf7",
+                  "#339af0",
+                  "#228be6",
+                  "#1c7ed6",
+                  "#1971c2",
+                  "#1864ab"
 ]
 
 cyan-hexs: [
