Add prepublish hook
- To make sure compiled files uploaded on npm registry
- close #77

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "test": "npm run test-typescript",
     "test-typescript": "tsc open-color.d.ts tests/typescript.ts --noEmit",
-    "compile-templates": "node compile-templates.js"
+    "compile-templates": "node compile-templates.js",
+    "prepublish": "npm run compile-templates"
   },
   "repository": {
     "type": "git",
