--- a/package.json
+++ b/package.json
@@ -38,9 +38,13 @@
   "devDependencies": {
     "archiver": "^1.3.0",
     "ase-utils": "^0.1.1",
-    "handlebars": "^4.0.5",
-    "typescript": "^2.5.2",
-    "uuid": "^3.0.1"
+    "handlebars": "^4.1.2",
+    "typescript": "^2.9.2",
+    "uuid": "^3.3.2"
   },
-  "types": "./open-color.d.ts"
+  "types": "./open-color.d.ts",
+  "dependencies": {
+    "lodash": "^4.17.11",
+    "npm": "^6.9.0"
+  }
 }
